# monocle

./: .dockerignore  .env  .env.sample  .gitattribute  .gitattributes  .gitignore  .gitmodules  .hlint.yaml  .mergify.yml  .stan.toml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile-api  Dockerfile-builder  Dockerfile-codegen  Dockerfile-migrator  Dockerfile-web  DockerfileUBI  Justfile  Makefile  README.md  cabal-override.project  cabal-override.project.tmpl  cabal.project  default.nix  docker-compose.dhall  docker-compose.yml  docker-compose.yml.dev  docker-compose.yml.img  files.dhall  flake.nix  fourmolu.yaml  lentille.cabal  license.md  main.py  make-docker-compose-yaml.sh  monocle.cabal  monoclectl  (+10 more)
app/: Main.hs  Monocle.hs
codegen/: MonocleCodegen.hs  README.md  monocle-codegen.cabal  rename_bs_module.py
codegen/Monocle/Protob/: Auth.hs  Change.hs  Config.hs  Crawler.hs  Issue.hs  Login.hs  Metric.hs  Search.hs
conf/: Container.dhall  config.yaml.sample  grafana-dashboard.dhall  projects.yaml.sample
contrib/: client-requests.py  client.py  docker-compose-kibana.yml  gource-project-log.py  pre-commit  pre-push  start-apiv1.sh  start-crawlers-legacy.sh  start-elk.sh  start-web.sh  start-with-podman.sh
deployment/: README.md  api-deployment.yaml  api-legacy-deployment.yaml  api-legacy-service.yaml  api-service.yaml  crawler-deployment.yaml  crawler-legacy-cronjob.yaml  crawler-legacy-deployment.yaml  elastic-data-persistentvolumeclaim.yaml  elastic-deployment.yaml  elastic-service.yaml  migrator-cronjob.yaml  monocle-config.yaml  web-deployment.yaml  web-service.yaml
doc/: architecture.plantuml  openapi.yaml  query-language.md
gitlab-schema/: README.md
haskell/: .gitignore  README.md  cabal.project  flake.nix  monocle.cabal  nix.project  shell.nix  weeder.dhall
haskell/app/: Api.hs  LentilleBugzilla.hs  LentilleGithub.hs  LentilleGitlab.hs  LentilleStandalone.hs  Macroscope.hs  Monocle.hs  Search.hs
haskell/codegen/Monocle/: Auth.hs  Change.hs  Config.hs  Crawler.hs  Login.hs  Metric.hs  Project.hs  Search.hs  TaskData.hs  UserGroup.hs
haskell/codegen/Monocle/Protob/: Auth.hs  Change.hs  Config.hs  Jwt.hs  Login.hs  Metric.hs  Search.hs
haskell/conf/Monocle/Auth/: Provider.dhall  Type.dhall
haskell/conf/Monocle/AuthProvider/GithubAuth/: Type.dhall
haskell/github-schema/: README.md  schema.docs.graphql
haskell/gitlab-schema/: schema.graphql
haskell/src/: CLI.hs  Lentille.hs  Tests.hs
haskell/src/Database/Bloodhound/: Raw.hs
haskell/src/Google/Protobuf/: Timestamp.hs
haskell/src/Json/: Extras.hs
haskell/src/Lentille/: Bugzilla.hs  BugzillaMock.hs  Gerrit.hs  GitHub.hs  GitLab.hs  GraphQL.hs
haskell/src/Lentille/Bugzilla/: Mock.hs  Spec.hs
haskell/src/Lentille/GitHub/: Favorites.hs  Issues.hs  Organization.hs  PullRequests.hs  RateLimit.hs  User.hs  Watching.hs
haskell/src/Lentille/GitLab/: Adapter.hs  Group.hs  MergeRequests.hs
haskell/src/Macroscope/: Main.hs  Test.hs  Worker.hs
haskell/src/Monocle/: Api.hs  Change.hs  Class.hs  Client.hs  Companion.hs  Config.hs  Env.hs  Logging.hs  Main.hs  Prelude.hs  Search.hs  TaskData.hs  Version.hs  WebApi.hs  WebServerApi.hs  Worker.hs
haskell/src/Monocle/Api/: CLI.hs  Client.hs  Config.hs  Env.hs  HTTP.hs  Jwt.hs  PBJSON.hs  Server.hs  Test.hs
haskell/src/Monocle/Api/Client/: Api.hs  CrawlerWorker.hs  Internal.hs  Worker.hs
haskell/src/Monocle/Backend/: Documents.hs  Index.hs  Janitor.hs  Provisioner.hs  Queries.hs  Test.hs
haskell/src/Monocle/Client/: Api.hs  Worker.hs
haskell/src/Monocle/Search/: CLI.hs  Change.hs  Lexer.hs  Parser.hs  Queries.hs  Query.hs  Syntax.hs
haskell/src/Monocle/Servant/: Env.hs  HTTP.hs  PBJSON.hs
haskell/src/Monocle/Test/: Mock.hs  Spec.hs
haskell/test/: Doctest.hs  Integration.hs  JsonDecode.hs  JsonDecode.py  Spec.hs
haskell/test/Lentille/: BugzillaMock.hs
haskell/test/Lentille/Bugzilla/: Spec.hs
haskell/test/Monocle/: Mock.hs  Provisioner.hs
haskell/test/data/: Config.dhall  config.yaml
helpers/: elastic.sh  monocle.sh
k8s/: README.md  api-claim0-persistentvolumeclaim.yaml  api-deployment.yaml  api-service.yaml  crawler-claim0-persistentvolumeclaim.yaml  crawler-claim1-persistentvolumeclaim.yaml  crawler-deployment.yaml  elastic-claim0-persistentvolumeclaim.yaml  elastic-data-persistentvolumeclaim.yaml  elastic-deployment.yaml  monocle-config.yaml  monocle-deployment.yml  web-deployment.yaml  web-service.yaml
lentille/: README.md  lentille.cabal
lentille-api/: README.md  lentille-api.cabal
lentille-api/app/: Main.hs  ReasonCodegen.hs
lentille-api/src/Lentille/: Api.hs  OpenApi.hs
lentille-bloodhound/: lentille-bloodhound.cabal
lentille-bloodhound/src/Lentille/: ELK.hs
lentille-bugzilla/: README.md  lentille-bugzilla.cabal
lentille-bugzilla/app/: Main.hs
lentille-bugzilla/src/Lentille/: Bugzilla.hs
lentille-bugzilla/test/: Spec.hs
lentille-bugzilla/test/Lentille/: BugzillaMock.hs
lentille-bugzilla/test/data/: rhbz1791815.json
lentille-github/: README.md  lentille-github.cabal
lentille-github-query/: lentille-github-query.cabal
lentille-github-query/github-schema/: schema.docs.graphql
lentille-github-query/src/Lentille/: GitHub.hs
lentille-github-query/src/Lentille/GitHub/: Favorites.hs
lentille-github/app/: Main.hs
lentille-github/doc/tutorial/: graphql-query.md
lentille-github/src/Lentille/: GitHub.hs  Github.hs
lentille-github/src/Lentille/GitHub/: Favorites.hs  Issues.hs
lentille-gitlab/: README.md  lentille-gitlab.cabal
lentille-gitlab/gitlab-schema/: schema.graphql
lentille-gitlab/src/Lentille/: GitLab.hs
lentille-gitlab/src/Lentille/GitLab/: Adapter.hs  Group.hs  MergeRequest.hs  MergeRequests.hs  Transformer.hs
lentille-mock/: README.md  lentille-mock.cabal
lentille-mock/src/Lentille/: MonocleMock.hs
lentille/src/: Lentille.hs
lentille/src/Lentille/: Client.hs  Worker.hs
lentille/test/: Spec.hs
macroscope/: README.md  macroscope.cabal
macroscope/app/: Main.hs
macroscope/src/Macroscope/: Main.hs  Worker.hs
migrator/: Dockerfile-migrator  (+2 more)
(+478 files in other folders)
