cabal-version:       2.4
name:                lentille
version:             0.1.0.0
synopsis:            Monocle companion library
description:
    Lentille is a haskell library for Monocle.
    .
    Use this library to query and interact with Monocle API.
    .
homepage:            https://github.com/change-metrics/lentille#readme
bug-reports:         https://github.com/change-metrics/lentille/issues
license:             AGPL-3.0-only
license-file:        LICENSE
author:              Monocle authors
maintainer:          Monocle authors <fboucher@redhat.com>
copyright:           2021 Monocle authors
category:            Development
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.4

source-repository head
  type:                git
  location:            https://github.com/change-metrics/lentille.git

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  build-depends:       aeson                      < 1.6
                     , aeson-casing               < 0.3
                     , exceptions                 < 0.11
                     , http-client                < 0.8
                     , http-client-tls            < 0.4
                     , relude                     > 1.0.0.0
                     , streaming                  < 0.3
                     , time                       < 1.12
  hs-source-dirs:      src
  exposed-modules:     Lentille
                     , Lentille.Client
                     , Lentille.Worker

library lentille-mock
  import:              common-options
  build-depends:       base                       < 5
                     , aeson                      < 1.6
                     , http-mock                  < 0.2
                     , http-types                 < 0.13
                     , lentille
                     , relude                     > 1.0 && < 1.1
                     , wai                        < 3.3
  hs-source-dirs:      lentille-mock/src
  exposed-modules:     Lentille.MonocleMock

executable lentille
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       relude                     > 1.0 && < 1.1
                     , lentille
                     , lentille-bugzilla
                     , optparse-generic           < 1.5
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite lentille-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base                       < 5
                     , lentille
                     , lentille-mock
                     , relude                     > 1.0 && < 1.1
                     , streaming                  < 0.3
                     , tasty                      < 1.5
                     , tasty-hunit                < 0.11
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite lentille-adr
  type:                exitcode-stdio-1.0
  main-is:             0003-choice-of-design.lhs
  hs-source-dirs:      doc/adr
  build-depends:       base                       < 5
                     , markdown-unlit             < 0.6
  ghc-options:         -pgmL markdown-unlit
  build-tool-depends:  markdown-unlit:markdown-unlit
  default-language:    Haskell2010

library lentille-bugzilla
  import:              common-options
  hs-source-dirs:      lentille-bugzilla/src
  build-depends:       bugzilla-redhat            < 0.4
                     , lentille
                     , relude                     > 1.0 && < 1.1
                     , streaming                  < 0.3
                     , time                       < 1.12
  exposed-modules:     Lentille.Bugzilla

executable lentille-bugzilla-cli
  import:              common-options
  hs-source-dirs:      lentille-bugzilla/app
  main-is:             Main.hs
  build-depends:       lentille-bugzilla
                     , optparse-generic           < 1.5
                     , relude                     > 1.0 && < 1.1
                     , streaming                  < 0.3
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite lentille-bugzilla-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      lentille-bugzilla/test
  other-modules:       Lentille.BugzillaMock
  main-is:             Spec.hs
  build-depends:       base                       < 5
                     , bugzilla-redhat            < 0.4
                     , http-types                 < 0.13
                     , lentille
                     , lentille-bugzilla
                     , lentille-mock
                     , network                    < 4
                     , relude                     > 1.0 && < 1.1
                     , tasty                      < 1.5
                     , tasty-hunit                < 0.11
                     , wai                        < 3.3
                     , warp                       < 3.4
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
