cabal-version:       3.0
name:                monocle
version:             1.11.1
homepage:            https://github.com/change-metrics/monocle#readme
bug-reports:         https://github.com/change-metrics/monocle/issues
license:             AGPL-3.0-only
license-file:        LICENSE
author:              Monocle authors
maintainer:          Monocle authors <fboucher@redhat.com>
copyright:           2021,2022,2023 Monocle authors
category:            Development
build-type:          Simple
tested-with:         GHC == 9.2.5
extra-source-files:  schemas/monocle/config/**/*.dhall,
                     schemas/github/schema.docs.graphql,
                     schemas/gitlab/schema.graphql,
                     test/data/*.yaml,
                     test/data/*.json

source-repository head
  type:                git
  location:            https://github.com/change-metrics/monocle.git

flag ci
  description: Make warnings error
  default:     False
  manual:      True

flag codegen
  description: Build codegen utility
  default:     False
  manual:      True

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wno-missing-pattern-synonym-signatures
                       --write-ghc-environment-files=always
                       -- Enable stan integration
                       -fwrite-ide-info
                       -hiedir=.hie
                       -- -fplugin=Effectful.Plugin
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
  if flag(ci)
    ghc-options:       -Werror

  default-language:    Haskell2010
  default-extensions:  BangPatterns,
                       -- ConstraintKinds enables defining aliases for constraints, e.g. `type MyE m = (MonadLog m, MonadTime m)`
                       ConstraintKinds,
                       DeriveGeneric,
                       DerivingStrategies,
                       -- FlexibleInstances enables defining instances for types such as Pico (which is defined as `Fixed Data.Fixed.E12` in Data.Fixed. It is safe to use.
                       FlexibleInstances,
                       FlexibleContexts,
                       GeneralizedNewtypeDeriving,
                       -- Import qualified post improve import list by aligning the modules name
                       ImportQualifiedPost,
                       -- KindSignatures, DataKinds and PolyKinds enables using `:::` to annotate a type a type with a name.
                       KindSignatures,
                       DataKinds,
                       PolyKinds,
                       LambdaCase,
                       MultiWayIf,
                       NamedFieldPuns,
                       NamedWildCards,
                       NoImplicitPrelude,
                       NumDecimals,
                       NumericUnderscores,
                       -- MultiParamTypeClasses enables declaring instances with multiple type params, e.g. this is required to define custom MonadReader or From instance.
                       MultiParamTypeClasses,
                       OverloadedStrings,
                       QuasiQuotes,
                       PatternSynonyms,
                       RecordWildCards,
                       ScopedTypeVariables,
                       StrictData,
                       TypeApplications,
                       TypeOperators,
                       ViewPatterns,
                       -- BlockArguments enables omiting `$` before do block
                       BlockArguments,
                       -- TypeFamilies enables effect dispatch definition
                       TypeFamilies,
                       PartialTypeSignatures,
                       -- DuplicateRecordFields enables attribute like `id` or `name` without causing a name conflict.
                       DuplicateRecordFields,
                       -- OverloadedRecordDot enables accessing attribute with `obj.name` (see Note [Record Dot Syntax])
                       OverloadedRecordDot

common codegen
  default-language:    Haskell2010
  hs-source-dirs:      codegen
  build-depends:       base                       < 5
                     , aeson
                     , bytestring
                     , containers                 >= 0.6
                     , deepseq                    >= 1.4
                     , proto3-suite               >= 0.5.0
                     , proto3-wire                >= 1.4.0
                     , text
                     , vector                     >= 0.12

library
  import:              common-options, codegen
  build-depends:       base                       < 5
                     , HsOpenSSL                  >= 0.11
                     , MonadRandom
                     , aeson                      >= 2
                     , aeson-casing
                     , aeson-pretty
                     , attoparsec                 >= 0.13
                     , base64                     >= 0.4
                     , cgroup-rts-threads
                     , blaze-markup               >= 0.8.2.8
                     , blaze-html                 >= 0.9.1.2
                     , binary                     >= 0.8
                     , bloodhound                 ^>= 0.19
                     , bugzilla-redhat            ^>= 1.0
                     , byteslice                  >= 0.2
                     , bytestring                 >= 0.10
                     , containers                 >= 0.6
                     , cookie
                     , cryptohash-sha256          >= 0.11.102.1
                     , dhall                      >= 1.40
                     , dhall-yaml                 >= 1.2
                     , directory
                     , either                     >= 5
                     , effectful                  < 2.3.0.0
                     , effectful-core
                     -- , effectful-plugin
                     , envparse                   >= 0.4
                     , exceptions                 >= 0.10
                     , fakedata                   >= 1.0
                     , fast-logger
                     , foldl
                     , gerrit                     >= 0.1.6
                     , gitrev                     >= 1.3.1
                     , hashable
                     , hashtables                 >= 1.2
                     , http-client                >= 0.6
                     , http-client-openssl        >= 0.3
                     , http-mock                  >= 0.1
                     , http-types                 >= 0.12
                     , json-syntax                >= 0.2
                     , jose                       >= 0.9
                     , list-t
                     , lens
                     , lens-aeson
                     , lucid                      >= 2.11.1
                     , megaparsec                 >= 9
                     , morpheus-graphql-client    >= 0.27
                     , mmorph
                     , mtl
                     , network                    >= 3
                     , network-uri                >= 2.5
                     , oidc-client                >= 0.6.0
                     , optparse-applicative
                     , parser-combinators         >= 1.2
                     , prometheus-client          >= 1.0
                     , prometheus-metrics-ghc     >= 1.0
                     , proto3-suite               >= 0.6.0
                     , qq-literals
                     , relude                     >= 1.0
                     , retry-effectful
                     , safe-exceptions            >= 0.1
                     , servant                    >= 0.18.2
                     , servant-server             >= 0.18.2
                     , servant-auth-server        >= 0.4.1.0
                     , servant-blaze              >= 0.9.1
                     , servant-lucid              >= 0.9.0.5
                     -- , servant-effectful (enabled after https://github.com/Kleidukos/servant-effectful/issues/5)
                     , streaming                  >= 0.2
                     , string-interpolate         >= 0.3.1.2
                     , tagged
                     , tasty                      >= 1.4
                     , tasty-hunit                >= 0.10
                     , template-haskell
                     , text-short                 >= 0.1
                     , text-time                  >= 0.3
                     , th-env                     >= 0.1
                     , time
                     , transformers
                     , unliftio
                     , unix
                     , vector                     >= 0.12
                     , wai                        >= 3.2.3
                     , wai-cors                   >= 0.2
                     , wai-logger                 >= 2.3
                     , wai-middleware-prometheus  >= 1.0
                     , warp                       >= 3.3.15
                     , witch                      >= 0.3
  hs-source-dirs:      src
  exposed-modules:     Monocle.Prelude
                     , Monocle.Env
                     , Monocle.Class
                     , Monocle.Logging
                     , Monocle.Version
                     , Monocle.Config
                     , Monocle.Config.Generated
                     , Monocle.Effects
                     , Monocle.Effects.Compat
                     , CLI
                     , Tests

                     -- monocle api
                     , Monocle.Entity
                     , Monocle.Main
                     , Monocle.Api.Server
                     , Monocle.Api.ServerHTMX
                     , Monocle.Api.Test
                     , Monocle.Api.Jwt

                     -- api client for lentille
                     , Monocle.Client
                     , Monocle.Client.Api

                     -- servant
                     , Monocle.Servant.HTTP
                     , Monocle.Servant.HTTPMain
                     , Monocle.Servant.PBJSON
                     , Monocle.Servant.HTMX

                     -- bloodhound
                     , Monocle.Backend.Documents
                     , Monocle.Backend.Index
                     , Monocle.Backend.Queries
                     , Monocle.Backend.Test
                     , Monocle.Backend.Provisioner
                     , Monocle.Backend.Janitor

                     -- megaparsec search language
                     , Monocle.Search.Lexer
                     , Monocle.Search.Parser
                     , Monocle.Search.Query
                     , Monocle.Search.Syntax

                     -- Lentille
                     , Lentille
                     , Lentille.GraphQL
                     , Lentille.Bugzilla
                     , Lentille.Jira
                     , Lentille.JiraSpec

                     , Lentille.GitHub.Types
                     , Lentille.GitHub.Issues
                     , Lentille.GitHub.RateLimit
                     , Lentille.GitHub.Organization
                     , Lentille.GitHub.GraphQLFragments
                     , Lentille.GitHub.PullRequests
                     , Lentille.GitHub.UserPullRequests
                     , Lentille.GitHub.User
                     , Lentille.GitHub.Utils
                     , Lentille.GitHub.Watching

                     , Lentille.GitLab.MergeRequests
                     , Lentille.GitLab.Group
                     , Lentille.GitLab.Adapter

                     , Lentille.Gerrit

                     , Macroscope.Main
                     , Macroscope.Worker
                     , Macroscope.Test

                     -- Fast json helpers
                     , Json.Extras

                     -- Codegen
                     , Monocle.Protob.Change
                     , Monocle.Protob.Issue
                     , Monocle.Protob.Config
                     , Monocle.Protob.Search
                     , Monocle.Protob.Crawler
                     , Monocle.Protob.Metric
                     , Monocle.Protob.Login
                     , Monocle.Protob.Auth

  other-modules:       Database.Bloodhound.Raw
                     , Lentille.Bugzilla.Mock
                     , Lentille.Bugzilla.Spec
                     , Paths_monocle
                     -- Remove after https://github.com/Kleidukos/servant-effectful/issues/5
                     , Effectful.Servant
                     -- TODO: extract effects to standalone packages
                     , Effectful.Prometheus
                     , Effectful.Env

  autogen-modules:     Paths_monocle

executable monocle
  import:              common-options
  hs-source-dirs:      app
  build-depends:       base, monocle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-T
  main-is:             Monocle.hs

benchmark json-decode
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  build-depends:       aeson, bloodhound, byteslice, bytestring, criterion, json-syntax, monocle, text-short, text-time, fakedata, random
  main-is:             JsonDecode.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

test-suite monocle-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       monocle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

executable monocle-codegen
  main-is:             MonocleCodegen.hs
  hs-source-dirs:      codegen
  if !flag(codegen)
    buildable:         False
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wunused-packages
  build-depends:       base                  < 5
                     , casing                ^>= 0.1
                     , relude                >= 1.0
                     , language-protobuf     ^>= 1.0
  default-language:    Haskell2010
