cabal-version:       2.4
name:                monocle-codegen
version:             0.1.0.0
author:              Tristan de Cacqueray
maintainer:          tdecacqu@redhat.com
build-type:          Simple

executable monocle-codegen
  main-is:             MonocleCodegen.hs
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wunused-packages
  build-depends:       base                  < 5
                     , casing                ^>= 0.1
                     , relude                ^>= 1.0
                     , language-protobuf     ^>= 1.0
  default-language:    Haskell2010
